--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,6 +75,35 @@ jobs:
         name: codecov-umbrella
         fail_ci_if_error: false
 
+# Дополнительная задача: тестирование в Docker
+  docker-test:
+    runs-on: ubuntu-latest
+    needs: test  # Запускается только если тесты прошли
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Build Docker image
+      run: |
+        docker build -t file-analyzer:${{ github.sha }} .
+        docker build -t file-analyzer:latest .
+
+    - name: Test in Docker container
+      run: |
+        docker run --rm file-analyzer:latest
+
+    - name: Test file analysis in Docker
+      run: |
+        # Создаем тестовые файлы для анализа
+        mkdir -p test-data
+        echo "print('Hello from Python')" > test-data/test.py
+        echo "Some text content" > test-data/readme.txt
+        
+        # Запускаем анализ в контейнере
+        docker run --rm -v $PWD/test-data:/data file-analyzer:latest \
+          python -m file_analyzer.analyzer /data
+
   # Дополнительная задача: проверка безопасности
   security:
     runs-on: ubuntu-latest
